# quizio-backend

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Readme.md  manage.py  populate_db.py  pyproject.toml
ai_quiz/: admin.py  ai.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
ai_quiz/consumers/: consumers.py  routing.py
ai_quiz/migrations/: 0001_initial.py  0002_initial.py  0002_remove_guestuser_room.py  0003_alter_answer_guest_user_remove_user_groups_and_more.py  0003_rename_roomid_room_room_id.py  0003_topic_rename_text_question_question_and_more.py  0004_alter_game_room_alter_game_status_singleplayergame_and_more.py  0005_alter_topic_name.py  0006_question_difficulty_singleplayerquestion_difficulty.py  0007_singleplayerquestion_answered_and_more.py  0008_participant_avatar_seed_participant_avatar_style_and_more.py  0009_alter_participant_avatar_seed_and_more.py  0010_rename_timer_question_time_per_question.py  0011_remove_participant_correct_answers_and_more.py  0012_question_updated_at.py  0013_gamemessage.py
ai_quiz/tests/: test_models.py  test_player_ready.py  test_player_waiting.py  test_question_answered.py  test_questions_views.py  test_urls.py
challenges/: admin.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
quiz/: models.py  serializers.py  urls.py  views.py
quiz-new/: admin.py  apps.py  serializers.py
quizio/: __init__.py  asgi.py  settings.py  urls.py  utils.py  wsgi.py
users/: admin.py  authenticators.py  models.py  serializers.py  signals.py  urls.py  views.py
(+35 files in other folders)
