[tool.poetry]
name = "quizio-backend"
version = "0.1.0"
description = ""
authors = ["kaushu42 <kaushu42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
adrf = "^0.1.8"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
channels = "^4.2.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
django-cors-headers = "^4.6.0"
pre-commit = "^4.0.1"
qrcode = "^8.0"
pillow = "^11.0.0"
langchain = "^0.3.12"
langchain-aws = "^0.2.9"
langchain-openai = "^0.2.12"
channels-redis = "^4.2.1"
colorlog = "^6.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ipdb = "^0.13.13"
mypy = "^1.13.0"
ipykernel = "^6.29.5"

[tool.ruff]
exclude = [".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
